# battery_monitor

./: CMakeLists.txt  LICENSE  Makefile  battery-monitor.c  battery_monitor-0.4.tar.bz2  battery_monitor-0.5.tar.bz2  battery_monitor-0.6.tar.bz2  battery_monitor.c  index.html
